# vibestart

./: .gitignore  index.html  package-lock.json  package.json
.cursor/rules/: copy-prompts-no-product-name.mdc  platform-macos-windows.mdc  preserve-macos-flow.mdc
.github/workflows/: release.yml  sync-gitee-only.yml
docs/: BUILD.md  CODEX-BRIDGE.md  MIRRORS.md  PLATFORMS.md  PROMO.md  TESTING.md
scripts/: prepare-codex-bridge-mirror.sh  release.ps1  release.sh  retry-release.sh  setup-github.sh  sync-gitee-release.sh  upload-gitee-mirror-release.sh
site/: index.html
site/css/: style.css
site/js/: config.js  main.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: mirrors.json
src-tauri/src/: browser.rs  browser_chrome.js  browser_link_handler.js  browser_loading.js  browser_oauth_hint.js  claude_code.rs  codex_app.rs  codex_bridge.rs  config.rs  env_scan.rs  filesystem.rs  ide_sync.rs  install_progress.rs  installer.rs  lib.rs  llm.rs  main.rs  mirrors.rs  network.rs  os.rs  project.rs  ssh.rs  tools_install.rs  updater.rs
src-tauri/src/deploy/: cloudflare_pages.rs  edgeone_pages.rs  git_pages.rs  gitee_pages.rs  github_pages.rs  mod.rs  vercel.rs
src/hooks/: useExternalReachability.ts  useInstallProgress.ts  useLaunchIde.tsx  useOpenInAppBrowser.ts  useOsInfo.ts  useTauriCommand.ts  useTheme.ts
src/lib/: backend-assist.ts  build-goals.ts  codex-bridge.ts  codex-flow.ts  deploy-records.ts  git-ssh-test.ts  github-hosting-links.ts  ide-accounts.ts  ide.ts  (+11 more)
(+138 files in other folders)
