[package]
name = "vibestart"
version = "0.1.0"
description = "VibeStart — 零基础 Vibe Coding 桌面向导"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibestart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-dialog = "2"
